# command-center

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: build-vs-buy.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DashboardHeader.tsx
frontend/src/components/ecosystem/: EcosystemPanel.tsx
frontend/src/components/job/: ContinueJobForm.tsx  JobDetailModal.tsx  JobForm.tsx
frontend/src/components/kanban/: JobCard.tsx  KanbanBoard.tsx  KanbanColumn.tsx
frontend/src/components/session/: SessionBadge.tsx  SessionPanel.tsx
frontend/src/components/timeline/: BudgetGauge.tsx  DayTimeline.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
scripts/: dev.sh  install_launchd.sh
src/command_center/: config.py  db.py  dispatcher.py  main.py  models.py
src/command_center/routers/: budget.py  dashboard.py  ecosystem.py  jobs.py  sessions.py  time_slots.py
src/command_center/services/: budget_guard.py  executor.py  integrator.py  monitor.py  scheduler.py
tests/: conftest.py  test_api.py  test_budget_guard.py  test_db.py  test_dispatcher.py  test_executor.py  test_integrator.py  test_monitor.py  test_run_job.py  test_scheduler.py  test_uc_job_detail.py
