[project]
name = "command-center"
version = "0.1.0"
description = "Dominium Command Center - Claude Code session orchestrator"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Allen Kim"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]

[project.scripts]
command-center = "command_center.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/command_center"]
